now serving html

--- a/cmd/svr/pokemon-tcg-apk/config.json
+++ b/cmd/svr/pokemon-tcg-apk/config.json
@@ -7,5 +7,6 @@
     "cardsCollection": "cards",
     "setsCollection": "sets",
     "usersCollection": "users"
-  }
+  },
+  "pokemonAPI": "https://api.pokemontcg.io/v1"
 }
