carousel working as original

--- a/cmd/svr/etcg/config.json
+++ b/cmd/svr/etcg/config.json
@@ -6,6 +6,7 @@
     "database": "Pokemon-Elite-TCG",
     "cardsCollection": "cards",
     "setsCollection": "sets",
-    "usersCollection": "users"
+    "usersCollection": "users",
+    "setLimit": 300
   }
 }
